fix(styles): Decrease spacing in index columns

--- a/styles/_index.scss
+++ b/styles/_index.scss
@@ -2,7 +2,7 @@
   margin: 2rem 0 0;
 
   &__column {
-    @include stack(.75rem);
+    @include stack(.5rem);
   }
 
   @media (max-width: $index-width) {
